2003-04-15  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* scintilla/*, data/properties/*: Scintilla CVS merge
	* anjuta.prj: Removed unnecessary files.
	* scintilla/PlatGTK.cxx: Force Pango fonts always
	* src/anjuta-plugins.c, src/anjuta_dirs.c, src/main.c,
	src/mainmenu_callbacks.c src/preferences.c: Use versionsed directory
	for preferences.

2003-04-15  Naba Kumar  <naba@gnome.org>

	Patch from Timothee Besset  <ttimo@idsoftware.com>
	* Makefile.am: Fixed a shell script error during intallation.
	
2003-04-14  Johannes Schmid <clubfan@users.sourceforge.net>

	Reviewed by Naba Kumar  <naba@gnome.org>
	* src/message-manager.cc: Added popup-menu to TreeView and fixed
	set_wm_class to use "anjuta" instead of "an.
	* src/message-manager-private.cc: Headers are hidden again.

2003-04-14  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* src/project_dbase_gui.c: Memory corruption fix.
	* anjuta.prj: Updated project file

2003-04-14  Dan Elphick <dre00r@ecs.soton.ac.uk>
	* an_file_view.c: Connect to event-after signal rather than event so that
	selection is updated first and thus context menu is for the right file.
	Reviewed and applied by Biswa.

2003-04-14  Naba Kumar  <naba@gnome.org>

	* anjuta.glade, anjuta_dialogs_strings.c: Updated setup dialog.
	
	* src/auncher.c: More child exit fixes
	from Timothee Besset  <ttimo@idsoftware.com>

2003-04-14  Johannes Schmid <clubfan@users.sourceforge.net>
	
	Reviewed by Naba Kumar  <naba@gnome.org>
	
	* src/message-manager.[c/h], src/message-manager-private[c/h],
		anjuta.[c/h]: Ported message-manager to Gtk2
	
	* plugins/patch/patch-plugin.c, src/anjuta-tools.c,
	src/anjuta_cbs.c, src/build_file.c, src/build_project.c,
	src/clean_project.c, src/compile.c, src/configurer.c,
	src/controls.c, src/cvs.c, src/debugger.c,
	src/find_in_files.c, src/gnome_project.c, src/mainmenu_callbacks.c,
	src/project_import.c, src/search-replace.c: Changed name from