@@ -1,7 +1,7 @@
 AC_PREREQ(2.52)
 AC_INIT(src/Makefile.am)
 
-ANJUTA_VERSION=1.2.0
+ANJUTA_VERSION=1.1.1
 
 GLIB_REQUIRED=2.0.6
 GDK_PIXBUF_REQUIRED=2.0.0
