@@ -1985,7 +1985,7 @@ void
 on_edit_user_properties1_activate           (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
-	gchar* user_propfile = g_strconcat (app->dirs->home, "/.anjuta/user.properties", NULL);
+	gchar* user_propfile = g_strconcat (app->dirs->home, "/.anjuta-" VERSION "/user.properties", NULL);
 	anjuta_goto_file_line_mark (user_propfile, 1, FALSE);
 	g_free (user_propfile);
 }
